--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: DivMelt
 Type: Package
 Title: HRM Diversity Assay Analysis Tool
-Version: 1.0.2
-Author: David Swan <dswan@fhcrc.org> with contributions from Craig A
+Version: 1.0.3
+Author: David A. Swan <dswan@fhcrc.org> with contributions from Craig A
         Magaret <cmagaret@fhcrc.org> and Matthew M Cousins
         <matthew.m.cousins@gmail.com>
-Maintainer: David Swan <dswan@fhcrc.org>
+Maintainer: David A. Swan <dswan@fhcrc.org>
 Description: This package has tools for analyzing DNA melting data to
         generate HRM scores, the DNA diversity measure output of the
         HRM Diversity Assay.  For additional documentation visit
@@ -15,6 +15,6 @@ Depends: R(>= 2.12.0),tcltk,glmnet
 Imports:
 biocViews:
 URL:
-Packaged: 2012-09-04 19:58:02 UTC; dswan
+Packaged: 2013-01-24 20:37:41 UTC; dswan
 Repository: CRAN
-Date/Publication: 2012-09-05 05:59:14
+Date/Publication: 2013-01-29 07:31:17
